@@ -98,7 +98,9 @@ int nx_getrectangle(NXWINDOW hwnd, FAR const struct nxgl_rect_s *rect,
 {
   FAR struct nxbe_window_s        *wnd = (FAR struct nxbe_window_s *)hwnd;
   struct nxsvrmsg_getrectangle_s  outmsg;
-
+  int ret;
+  sem_t sem_done;
+  
 #ifdef CONFIG_DEBUG
   if (!hwnd || !rect || !dest)
     {
@@ -118,7 +120,31 @@ int nx_getrectangle(NXWINDOW hwnd, FAR const struct nxgl_rect_s *rect,
 
   nxgl_rectcopy(&outmsg.rect, rect);
 
+  /* Create a semaphore for tracking command completion */
+
+  outmsg.sem_done = &sem_done;
+  ret = sem_init(&sem_done, 0, 0);
+  
+  if (ret != OK)
+    {
+      gdbg("sem_init failed: %d\n", errno);
+      return ret;
+    }
+  
   /* Forward the fill command to the server */
 
-  return nxmu_sendwindow(wnd, &outmsg, sizeof(struct nxsvrmsg_getrectangle_s));
+  ret = nxmu_sendwindow(wnd, &outmsg, sizeof(struct nxsvrmsg_getrectangle_s));
+  
+  /* Wait that the command is completed, so that caller can release the buffer. */
+  
+  if (ret == OK)
+    {
+      ret = sem_wait(&sem_done);
+    }
+  
+  /* Destroy the semaphore and return. */
+  
+  sem_destroy(&sem_done);
+  
+  return ret;
 }
